<resources>
    <string name="app_name">TheSocialCodeNetwork</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vous_n_avez_pas_un_compte">Vous n\'avez pas un compte ?</string>
    <string name="e_mail">e-mail</string>
    <string name="mot_de_passe">mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="vous_n_avez_pas_de_compte">Vous n\'avez pas de compte ?</string>
    <string name="inscrivez_vous">Inscrivez-vous</string>
    <string name="email">email</string>
    <string name="mot_de_passe_oublie">"Mot de passe oublié ?"</string>
    <string name="password">mot de passe</string>
    <string name="username">nom</string>
    <string name="cr_er_mon_compte">créer mon compte</string>
    <string name="firstName">Nom</string>
    <string name="lastName">Prénom</string>
    <string name="look_for_user">recherchez un utilisateur</string>
    <string name="no_available_data">aucun utilisateur trouvé</string>
    <string name="groups">groupes</string>
    <string name="friends">amis</string>
    <string name="utilisateur">utilisateur</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>